--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="perfil_image_size">64dp</dimen>
+    <dimen name="titulo_toolbar">10dp</dimen>
 </resources>
