--- a/app/src/main/res/layout/detalle_categoria.xml
+++ b/app/src/main/res/layout/detalle_categoria.xml
@@ -7,6 +7,36 @@
     android:orientation="vertical"
     tools:context="proyects.carosdrean.xyz.encuentralobetha.DetalleCategoria">
 
+    <!--<android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:id="@+id/cont_tooldemas"
+        android:elevation="10dp"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbarDemas"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            </android.support.design.widget.AppBarLayout>-->
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/toolbarDetealleCategoria">
+
+        </android.support.v7.widget.Toolbar>
+
+    </android.support.design.widget.AppBarLayout>
+
+
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
