--- a/app/src/main/res/layout/item_detalle_categoria.xml
+++ b/app/src/main/res/layout/item_detalle_categoria.xml
@@ -14,8 +14,10 @@
         android:id="@+id/iv_avatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:src="@drawable/perfil"
         android:layout_centerVertical="true"
-        android:src="@drawable/perfil"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <!--<ImageView
         android:id="@+id/iv_avatar"
@@ -33,7 +35,7 @@
         tools:text="Software Center" />
 
     <TextView
-        android:id="@+id/tv_productos"
+        android:id="@+id/tv_categoria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tv_name"
@@ -46,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tv_name"
-        android:layout_below="@+id/tv_productos"
+        android:layout_below="@+id/tv_categoria"
         android:text="Direccion"
         tools:text="Plaza de Armas Ica" />
 </RelativeLayout>
